--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   "devDependencies": {
     "@types/node": "^24.1.0",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "fastify": "^5.4.0",
+    "fastify-type-provider-zod": "^5.0.2",
+    "zod": "^4.0.14"
   }
 }
