--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
     "@types/node": "^24.1.0",
+    "drizzle-kit": "^0.31.4",
     "typescript": "^5.9.2",
     "ultracite": "5.1.2"
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "drizzle-orm": "^0.44.4",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.2",
     "postgres": "^3.4.7",
