--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node --env-file .env --experimental-strip-types --no-warnings src/server.ts",
-    "dev": "node --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts"
+    "dev": "node --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
+    "db:seed": "node --env-file .env --experimental-strip-types --no-warnings src/db/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@biomejs/biome": "2.1.2",
     "@types/node": "^24.1.0",
     "drizzle-kit": "^0.31.4",
+    "drizzle-seed": "^0.3.1",
     "typescript": "^5.9.2",
     "ultracite": "5.1.2"
   },
